--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-         <div data-toggle="collapse" data-target="#flavors">Flavors</div>
+         <div data-toggle="collapse" data-target="#flavors" href="#flavors">Flavors</div>
        </h4>
           </div>
           <div id="flavors" class="panel-collapse collapse">
@@ -21,7 +21,7 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-          <div data-toggle="collapse" data-target="#toppings">Toppings</div>
+          <div data-toggle="collapse" data-target="#toppings" href="#toppings">Toppings</div>
         </h4>
           </div>
           <div id="toppings" class="panel-collapse collapse">
@@ -36,7 +36,7 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-         <div data-toggle="collapse" data-target="#cone">Cones</div>
+         <div data-toggle="collapse" data-target="#cone" href="#cone">Cones</div>
        </h4>
           </div>
           <div id="cone" class="panel-collapse collapse">
