--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@
 }
 
 #itemOptions .panel-heading {
-  background-color:lightgray;
+  cursor: pointer;
+  /*background-color:lightgray;*/
   -moz-box-shadow:    inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow:         inset 0 0 10px #000000;
