toggle class added to panel-heading div

--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 
       <div class="panel-group">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading" data-toggle="collapse" data-target="#flavors">
             <h4 class="panel-title">
          <div data-toggle="collapse" data-target="#flavors">Flavors</div>
             </h4>
@@ -19,7 +19,7 @@
 
       <div class="panel-group">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading"data-toggle="collapse" data-target="#toppings">
             <h4 class="panel-title">
           <div data-toggle="collapse" data-target="#toppings">Toppings</div>
         </h4>
@@ -34,7 +34,7 @@
 
       <div class="panel-group">
         <div class="panel panel-default">
-          <div class="panel-heading">
+          <div class="panel-heading" data-toggle="collapse" data-target="#cone">
             <h4 class="panel-title">
          <div data-toggle="collapse" data-target="#cone">Cones</div>
        </h4>
