--- a/views/header.html
+++ b/views/header.html
@@ -1,1 +1,4 @@
-<div id ="header">Ice Cream Nutritional Calculator</div>
+<div id ="header">
+  <h1>Ice Cream </h1>
+  <h2>Nutritional Calculator</h2>
+</div>
