--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,12 @@
   font-size:60px;
   font-family: 'Lobster', cursive;
   line-height: 0.2;
+  text-shadow: 2px 2px white;
 }
 #header h2 {
   font-size:20px;
   font-family: 'Raleway', sans-serif;
+  text-shadow: 1px 0px white;
 }
 
 #home {
@@ -47,7 +49,7 @@
   cursor: pointer;
 }
 #itemOptions .itemQty {
-  width:20px;
+  width:30px;
   text-align:center;
 }
 
