--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@
   padding: 20px;
   background-color: pink;
   color:#616161;
+  border-bottom: solid;
+  border-color:white;
 }
 #header h1 {
   font-size:60px;
   font-family: 'Lobster', cursive;
-  line-height: 0.2;
   text-shadow: 2px 2px white;
+  line-height: 0.2;
 }
 #header h2 {
   font-size:20px;
@@ -33,21 +35,29 @@
   float:right;
   margin:10px;
 }
-#itemOptions .panel-heading {
-  /*background-color:lightgray;*/
-  -moz-box-shadow:    inset 0 0 10px #000000;
-  -webkit-box-shadow: inset 0 0 10px #000000;
-  box-shadow:         inset 0 0 10px #000000;
-}
-#itemOptions .panel-heading:hover {
-  cursor: pointer;
-  -moz-box-shadow:    inset 0 0 10px pink;
-  -webkit-box-shadow: inset 0 0 10px pink;
-  box-shadow:         inset 0 0 10px pink;
-}
 #itemOptions i:hover {
+  color:pink;
   cursor: pointer;
 }
+#itemOptions .panel-heading {
+  background-color:lightgray;
+  font-family: 'Lobster', cursive;
+  text-shadow: 2px 2px white;
+  -moz-box-shadow:    inset 0 0 3px #DDDCDC;
+  -webkit-box-shadow: inset 0 0 3px #DDDCDC;
+  box-shadow:         inset 0 0 3px #000000;
+}
+#itemOptions .panel-title {
+  /* font-weight:bold; */
+  font-size: 1.8em;
+}
+/* #itemOptions .panel-heading:hover {
+  cursor: pointer;
+  -moz-box-shadow:    inset 0 0 20px pink;
+  -webkit-box-shadow: inset 0 0 20px pink;
+  box-shadow:         inset 0 0 20px pink;
+} */
+
 #itemOptions .itemQty {
   width:30px;
   text-align:center;
@@ -65,7 +75,8 @@
 
 /*Entire nutrition fact div*/
 .performance-facts {
-  border: 1px solid black;
+  box-shadow:5px 7px black;
+  border: 3px solid white;
   margin: 20px;
   float: left;
   width: 280px;
