--- a/views/home.html
+++ b/views/home.html
@@ -47,21 +47,17 @@
           </div>
         </div>
       </div>
-      <div class="itemList">
+      <!-- <div class="itemList">
           <h1>Your order</h1>
           <p ng-repeat="item in itemObjects" ng-hide="item.quantity == 0">{{item.quantity}} {{item.name}}</p>
-      </div>
+      </div> -->
     </div>
-
-
-
 
     <div id="factSheet" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
       <section class="performance-facts">
         <header class="performance-facts__header">
           <h1 class="performance-facts__title">Nutrition Facts</h1>
           <p>Number of Items {{itemNumber}}</p>
-            <!-- <p>Serving Size 1 scoop (about 82g)</p> -->
             <p>Serving Per Container 1</p>
         </header>
         <table class="performance-facts__table">
@@ -72,50 +68,50 @@
           </thead>
           <tbody>
             <tr>
-              <th colspan="2"> <b>Calories</b> {{calorieTotal}}</th>
-              <td>Calories from Fat {{fatCalTotal}}</td>
+              <th colspan="2"> <b>Calories</b> {{totalNutrition.calorieTotal}}</th>
+              <td>Calories from Fat {{totalNutrition.fatCalTotal}}</td>
             </tr>
             <tr class="thick-row">
               <td colspan="3" class="small-info"><b>% Daily Value*</b></td>
             </tr>
             <tr>
-              <th colspan="2"><b>Total Fat</b> {{totalFatGrams}}g</th>
-              <td><b>{{totalFatDV|number:0}}%</b></td>
+              <th colspan="2"><b>Total Fat</b> {{totalNutrition.totalFatGrams}}g</th>
+              <td><b>{{totalDV.totalFatDV|number:0}}%</b></td>
             </tr>
             <tr>
               <td class="blank-cell"></td>
-              <th>Saturated Fat {{totalSatFat}}g</th>
-              <td><b>{{totalSatFatDV|number:0}}%</b></td>
+              <th>Saturated Fat {{totalNutrition.totalSatFat}}g</th>
+              <td><b>{{totalDV.totalSatFatDV|number:0}}%</b></td>
             </tr>
             <tr>
               <td class="blank-cell"></td>
-              <th>Trans Fat {{totalTransFat}}g</th>
+              <th>Trans Fat {{totalNutrition.totalTransFat}}g</th>
               <td></td>
             </tr>
             <tr>
-              <th colspan="2"><b>Cholesterol</b> {{totalCholesterol}}mg</th>
-              <td><b>{{totalCholesterolDV|number:0}}%</b></td>
+              <th colspan="2"><b>Cholesterol</b> {{totalNutrition.totalCholesterol}}mg</th>
+              <td><b>{{totalDV.totalCholesterolDV|number:0}}%</b></td>
             </tr>
             <tr>
-              <th colspan="2"><b>Sodium</b> {{totalSodium}}mg</th>
-              <td><b>{{totalSodiumDV|number:0}}%</b></td>
+              <th colspan="2"><b>Sodium</b> {{totalNutrition.totalSodium}}mg</th>
+              <td><b>{{totalDV.totalSodiumDV|number:0}}%</b></td>
             </tr>
             <tr>
-              <th colspan="2"><b>Total Carbohydrate</b> {{totalCarbs}}g</th>
-              <td><b>{{totalCarbDV|number:0}}%</b></td>
-            </tr>
-            <tr>
-              <td class="blank-cell"></td>
-              <th>Dietary Fiber {{totalFiber}}g</th>
-              <td><b>{{totalDietFiberDV|number:0}}%</b></td>
+              <th colspan="2"><b>Total Carbohydrate</b> {{totalNutrition.totalCarbs}}g</th>
+              <td><b>{{totalDV.totalCarbDV|number:0}}%</b></td>
             </tr>
             <tr>
               <td class="blank-cell"></td>
-              <th>Sugars {{totalSugar}}g</th>
+              <th>Dietary Fiber {{totalNutrition.totalFiber}}g</th>
+              <td><b>{{totalDV.totalDietFiberDV|number:0}}%</b></td>
+            </tr>
+            <tr>
+              <td class="blank-cell"></td>
+              <th>Sugars {{totalNutrition.totalSugar}}g</th>
               <td></td>
             </tr>
             <tr class="thick-end">
-              <th colspan="2"><b>Protein</b> {{totalProtein}}g</th>
+              <th colspan="2"><b>Protein</b> {{totalNutrition.totalProtein}}g</th>
               <td></td>
             </tr>
           </tbody>
@@ -124,12 +120,12 @@
         <table class="performance-facts__table--grid">
           <tbody>
             <tr>
-              <td colspan="2">Vitamin A {{totalVitaminA|number:0}}%</td>
+              <td colspan="2">Vitamin A {{totalNutrition.totalVitaminA|number:0}}%</td>
               <td>Vitamin C {{totalVitaminC|number:0}}%</td>
             </tr>
             <tr class="thin-end">
-              <td colspan="2">Calcium {{totalCalcium|number:0}}%</td>
-              <td>Iron {{totalIron|number:0}}%</td>
+              <td colspan="2">Calcium {{totalNutrition.totalCalcium|number:0}}%</td>
+              <td>Iron {{totalNutrition.totalIron|number:0}}%</td>
             </tr>
           </tbody>
         </table>
@@ -151,61 +147,6 @@
             </tr> -->
         </tbody>
       </table>
-        <!-- <table class="performance-facts__table-small small-info">
-          <thead>
-            <tr>
-              <td colspan="2"></td>
-              <th>Calories:</th>
-              <th>2,000</th>
-              <th>2,500</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th colspan="2">Total Fat</th>
-              <td>Less than</td>
-              <td>65g</td>
-              <td>80g</td>
-            </tr>
-            <tr>
-              <td class="blank-cell"></td>
-              <th>Saturated Fat</th>
-              <td>Less than</td>
-              <td>20g</td>
-              <td>25g</td>
-            </tr>
-            <tr>
-              <th colspan="2">Cholesterol</th>
-              <td>Less than</td>
-              <td>300mg</td>
-              <td>300 mg</td>
-            </tr>
-            <tr>
-              <th colspan="2">Sodium</th>
-              <td>Less than</td>
-              <td>2,400mg</td>
-              <td>2,400mg</td>
-            </tr>
-            <tr>
-              <th colspan="3">Total Carbohydrate</th>
-              <td>300g</td>
-              <td>375g</td>
-            </tr>
-            <tr>
-              <td class="blank-cell"></td>
-              <th colspan="2">Dietary Fiber</th>
-              <td>25g</td>
-              <td>30g</td>
-            </tr>
-          </tbody>
-        </table> -->
-
-        <!-- <p class="small-info">
-          Calories per gram:
-        </p>
-        <p class="small-info text-center">
-          Fat 9 &bull; Carbohydrate 4 &bull; Protein 4
-        </p> -->
       </section>
     </div>
   </div>
